--- a/client/main.css
+++ b/client/main.css
@@ -6,6 +6,12 @@ html, body {
     overflow: hidden;
 }
 
+a:-webkit-any-link {
+    color: -webkit-link;
+    cursor: pointer;
+    text-decoration: none;
+}
+
 @keyframes backgroundAnimation {
     0% {
         background-color: rgba(0, 0, 0, 0.2);
