--- a/client/main.css
+++ b/client/main.css
@@ -802,6 +802,10 @@ a:-webkit-any-link {
     background-size: 30px 30px; 
 }
 
+#pilot-view-buy-money-icon {
+    background-image: url("../src/media-files/money/gold.png");
+}
+
 .shape-view-upgrade-name-level-display {
     position: absolute;
     display: flex;
@@ -1093,17 +1097,16 @@ a:-webkit-any-link {
     font-size: 24px;
     color: white;
     left: 30px;
-    top: 55px;
+    top: 190px;
 }
 
 #pilot-display-image {
     position: absolute;
-    top: 115px;
+    top: 235px;
     left: 30px;
     width: 375px;
     height: 375px;
     background-size: 375px 375px;
-    background-color: white;
 }
 
 #pilot-right-side-display {
@@ -1112,5 +1115,56 @@ a:-webkit-any-link {
     right: 30px;
     height: calc(100% - 170px);
     width: calc(100% - 465px);
-    background-color: black;
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
+#pilot-story-display {
+    margin-top: 5px;
+    color: white;
+}
+
+.pilot-display-skill-header {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    background-color: rgba(0, 0, 0, .2);
+    border-radius: 4px;
+}
+
+.pilot-display-header-data {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    height: 100%;
+    width: calc(100% - 60px);
+    left: 60px;
+}
+
+.pilot-active-skills-display, .pilot-operates-display {
+    display: flex;
+    margin-left: 4px;
+}
+
+#pilot-skill-header-active-skills {
+    color: #00ff00;
+}
+
+#pilot-header-display-level {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 4px;
+    color: white;
+    width: 20px;
+    height: 20px;
+    background-color: green;
+    border-radius: 100%;
+}
+
+#pilot-header-display-name {
+    margin-left: 2.5px;
 }
