--- a/client/main.css
+++ b/client/main.css
@@ -1289,16 +1289,37 @@ a:-webkit-any-link {
     bottom: 15px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: black;
+    background-color: rgba(0, 0, 0, .5);
     width: 375px;
     height: 40px;
     border: solid;
     border-color: black;
-    border-width: 4px;
+    border-width: 3.5px;
+}
+
+#grayDamageBar {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 40%;
+    height: 100%;
+    background-color: #808080;
 }
 
 #healthBar {
-    width: 100%;
     height: 100%;
     background-color: #00ff00;
+}
+
+#healthText {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-weight: 600;
+    top: 0px;
+    left: 5px;
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
 }
