--- a/client/main.css
+++ b/client/main.css
@@ -1332,3 +1332,12 @@ a:-webkit-any-link {
     color: white;
     font-weight: 600;
 }
+
+#selectorMiniMap {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 450px;
+    height: 450px;
+    transform: translate(-50%, -50%);
+}
