--- a/client/main.css
+++ b/client/main.css
@@ -1339,3 +1339,8 @@ a:-webkit-any-link {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+#gameCanvas {
+    width: 100%;
+    height: 100%;
+}
