--- a/client/main.css
+++ b/client/main.css
@@ -1304,11 +1304,13 @@ a:-webkit-any-link {
     width: 40%;
     height: 100%;
     background-color: #808080;
+    transition: .1s;
 }
 
 #healthBar {
     height: 100%;
     background-color: #00ff00;
+    transition: .1s;
 }
 
 #healthText {
