--- a/client/main.css
+++ b/client/main.css
@@ -1307,6 +1307,24 @@ a:-webkit-any-link {
     transition: .1s;
 }
 
+#menuButton {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 20px;
+    top: 10px;
+    right: 10px;
+    width: 65px;
+    height: 35px;
+    cursor: pointer;
+    border-radius: 4px;
+    pointer-events: auto;
+    z-index: 10000;
+    background-color: rgb(0, 0, 0, .4);
+}
+
 #healthBar {
     height: 100%;
     background-color: #00ff00;
