--- a/client/main.css
+++ b/client/main.css
@@ -1367,6 +1367,8 @@ a:-webkit-any-link {
 #gameCanvas {
     width: 100%;
     height: 100%;
+    background-color: #fff;
+    z-index: 1;
 }
 
 .topHolder {
