--- a/client/main.css
+++ b/client/main.css
@@ -1411,3 +1411,19 @@ a:-webkit-any-link {
     align-items: center;
     justify-content: center;
 }
+
+#beaconCaptured {
+    display: none;
+    position: absolute;
+    top: 150px;
+    left: 50%;
+    padding: 8px;
+    font-size: 28px;
+    font-weight: 600;
+    transform: translateX(-50%);
+    color: white;
+    overflow: hidden;
+    background-color: rgb(0, 0, 255);
+    transition: .4s;
+}
+
