--- a/client/main.css
+++ b/client/main.css
@@ -1412,18 +1412,32 @@ a:-webkit-any-link {
     justify-content: center;
 }
 
+.announcement-in-game-header {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    left: 0px;
+    top: 150px;
+    width: 100%;
+    pointer-events: none;
+}
+
 #beaconCaptured {
     display: none;
-    position: absolute;
-    top: 150px;
-    left: 50%;
     padding: 8px;
     font-size: 28px;
     font-weight: 600;
-    transform: translateX(-50%);
     color: white;
-    overflow: hidden;
     background-color: rgb(0, 0, 255);
-    transition: .4s;
 }
 
+#killsAnnouncement {
+    display: none;
+    padding: 8px;
+    font-size: 28px;
+    font-weight: 600;
+    color: white;
+    background-color: rgb(0, 0, 0, .6);
+}
