--- a/client/main.css
+++ b/client/main.css
@@ -1441,3 +1441,36 @@ a:-webkit-any-link {
     color: white;
     background-color: rgb(0, 0, 0, .6);
 }
+
+#gameResults {
+    display: none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+#gameResultDisplay {
+    color: white;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgb(0, 255, 0, .8);
+    width: 100%;
+}
+
+.result-title {
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.result-description {
+    font-size: 14px;
+    font-weight: 700;
+}
