--- a/client/main.css
+++ b/client/main.css
@@ -1474,3 +1474,14 @@ a:-webkit-any-link {
     font-size: 14px;
     font-weight: 700;
 }
+
+#gameResultOverview {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+}
