--- a/client/main.css
+++ b/client/main.css
@@ -1596,6 +1596,14 @@ tbody td {
     font-weight: 500;
 }
 
+.table-grid-item-reward-icon {
+    margin-left: 7px;
+    margin-right: 7px;
+    background-size: 50px 50px;
+    width: 50px;
+    height: 50px;
+}
+
 #grid-table-item-honor-info {
     position: absolute;
     display: flex;
