--- a/client/main.css
+++ b/client/main.css
@@ -1619,3 +1619,21 @@ tbody td {
     background-color: rgb(255, 255, 255, .3);
     border-radius: 100%;
 }
+
+#game-screen-exit-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 7px;
+    width: 125px;
+    height: 40px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    font-weight: 700;
+    background-color: rgb(0, 0, 0, .3);
+}
+
+#game-screen-exit-button:hover {
+    background-color: rgb(0, 0, 0, .5);
+}
