--- a/client/main.css
+++ b/client/main.css
@@ -1637,3 +1637,14 @@ tbody td {
 #game-screen-exit-button:hover {
     background-color: rgb(0, 0, 0, .5);
 }
+
+#easy-mode-display {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 7px;
+    font-size: 24px;
+    font-weight: 700;
+    color: white;
+    background-color: rgba(0, 255, 0, .85);
+}
