--- a/client/main.css
+++ b/client/main.css
@@ -615,6 +615,8 @@ a:-webkit-any-link {
     height: calc(100% - 200px);
     background-color: rgba(0, 0, 0, .15);
     border-radius: 4px;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 #shape-view-back-button,
