--- a/client/main.css
+++ b/client/main.css
@@ -608,12 +608,14 @@ a:-webkit-any-link {
 
 #task-view-display {
     position: absolute;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     top: 50%;
     left: 50%;
     transform: translate(-50%, calc(-50% - 25px));
     width: calc(100% - 180px);
     height: calc(100% - 200px);
-    background-color: rgba(0, 0, 0, .15);
     border-radius: 4px;
     overflow: hidden;
     overflow-y: scroll;
