--- a/client/main.css
+++ b/client/main.css
@@ -1806,3 +1806,34 @@ tbody td {
     color: white;
     margin-left: 3px;
 }
+
+.task-claim-button {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 50%;
+    right: 30px;
+    transform: translateY(-50%);
+    width: 150px;
+    height: 45px;
+    border-radius: 4px;
+    background-color: rgba(35, 134, 232);
+    font-weight: 700;
+    font-size: 22px;
+    color: white;
+    cursor: pointer;
+}
+
+.task-claim-button:hover {
+    background-color: rgb(28, 110, 191);
+}
+
+.task-label {
+    position: absolute;
+    left: 130px;
+    top: 15px;
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+}
