sorted task list + autoupdate/add

--- a/client/main.css
+++ b/client/main.css
@@ -616,8 +616,8 @@ a:-webkit-any-link {
 
 #task-view-display {
     position: absolute;
-    display: grid;
-    grid-template-columns: 1fr;
+    /*display: grid;
+    grid-template-columns: 1fr;*/
     top: 50%;
     left: 50%;
     transform: translate(-50%, calc(-50% - 25px));
